--- a/NF.ipynb
+++ b/NF.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Integrate and Fire Model \n",
-    "### Group 6: *Maia Barrow, Cianna French, Eden Kier Sydney Moodie, Wasifa Nasrin, Kelly Stouffer, Vivan Tadakamalla*\n",
+    "### Group 6: *Maia Barrow, Cianna French, Eden La Kier Sydney Moodie, Wasifa Nasrin, Kelly Stouffer, Vivan Tadakamalla*\n",
     " An integrated firing model, or IF for short, is one of the most popular models used in computational neuroscience for modeling and analyzing the behavior of neural systems in response to a stimulus. The IF model is a simplified neuron model and can illustrate how electrical input is accumulated over time. \n",
     "\n",
     "Some uses of IF models in research:\n",
