--- a/NF.ipynb
+++ b/NF.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Integrate and Fire Model \n",
-    "### Group 6: *Maia Barrow, Cianna French, Eden Kier Sydney Moodie, Wasifa Nasrin, Kelly Stouffer, Vivan Tadakamalla*\n",
+    "### Group 6: *Maia Barrow, Cianna French, Eden La Kier Sydney Moodie, Wasifa Nasrin, Kelly Stouffer, Vivan Tadakamalla*\n",
     " An integrated firing model, or IF for short, is one of the most popular models used in computational neuroscience for modeling and analyzing the behavior of neural systems in response to a stimulus. The IF model is a simplified neuron model and can illustrate how electrical input is accumulated over time. \n",
     "\n",
     "Some uses of IF models in research:\n",
@@ -142,9 +142,10 @@
     "Both LIF model and biological neuron have a resting potential that requires energy to sustain. In a biological neuron, that is maintained through ion pumps whereas in the LIF model, it is shown as a constant rmp. | The LIF model does not account for the different ion pumps and simplifies it to a single leakage term. /n", 
     "\n",
     "**What was the most challenging aspect of this homework?**\n",
-    "Coming up with the comparisons and contrasts!\n",
+    "Coming up with the comparisons and contrasts! Also trying to navigate a new platform asynchronously as a group.\n",
     "\n",
-    "**Estimate how long it took you to complete this homework.**"
+    "**Estimate how long it took you to complete this homework.**\n",
+    "It varied from person to person based on how the assignment was split up between group members, but overall a guestimate would be around 30 minutes. We expect future assignments to take less time as we become familiar with Github.\n"
    ]
   }
  ],
